Ensure trashcan icon always visible

--- a/src/components/view-class-work/left-nav.sass
+++ b/src/components/view-class-work/left-nav.sass
@@ -72,6 +72,7 @@
         color: $cc-charcoal
 
         svg
+          min-width: 24px
           cursor: pointer
           fill: $cc-teal-light-4
 
